[package]
name = "derive-build"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
description = "A derive macro for building structs"
license = "MIT"
repository = "https://github.com/andrewgazelka/derive-build"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.13"
quote = "1.0"
Inflector = "0.11.4"
proc-macro2 = "1.0.56"
